<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/size_10"
    android:layout_margin="@dimen/size_10"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    android:id="@+id/cvCart">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivItemImage"
            android:layout_width="@dimen/size_90"
            android:layout_height="@dimen/size_90"
            android:src="@drawable/qrcode_image"
            android:layout_marginEnd="@dimen/size_30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_25"
            android:layout_marginStart="@dimen/size_10"
            android:layout_marginBottom="@dimen/size_20"
            android:text="@string/item_title"
            android:maxLines="1"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_15"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@id/ivItemImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemQtd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/item_qtd"
            android:textStyle="normal"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_15"
            android:maxLines="1"
            android:layout_marginStart="@dimen/size_10"
            android:layout_marginBottom="@dimen/size_20"
            android:layout_marginEnd="@dimen/text_15"
            app:layout_constraintStart_toEndOf="@id/ivItemImage"
            app:layout_constraintTop_toBottomOf="@id/tvItemTitle"/>

        <TextView
            android:id="@+id/tvItemValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/item_price"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_15"
            android:maxLines="1"
            android:layout_marginEnd="@dimen/size_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/ivEmptyListFav"
            android:layout_width="@dimen/size_200"
            android:layout_height="@dimen/size_200"
            android:layout_marginTop="@dimen/size_30"
            android:contentDescription="@string/empty_file"
            android:gravity="center"
            android:src="@drawable/empty_list"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tvEmptyListFav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty_favlist"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_15"
            android:layout_marginTop="@dimen/size_5"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivEmptyListFav"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>