<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.cart.view.CartFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bvCloseOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/cart_item"/>

    <Button
        android:id="@+id/bvCloseOrder"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/close_order"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/text_10"
        android:backgroundTint="@color/dark_gray"
        android:layout_marginStart="@dimen/size_20"
        android:layout_marginTop="@dimen/size_20"
        android:layout_marginEnd="@dimen/size_20"
        android:layout_marginBottom="@dimen/size_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bvTotalOrder"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/bvTotalOrder"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/text_10"
        android:textAllCaps="false"
        android:backgroundTint="@color/light_gray"
        android:layout_marginTop="@dimen/size_20"
        android:layout_marginEnd="@dimen/size_20"
        android:layout_marginBottom="@dimen/size_20"
        app:layout_constraintStart_toEndOf="@id/bvCloseOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="121dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivEmptyListFav"
        android:layout_width="@dimen/size_200"
        android:layout_height="@dimen/size_200"
        android:layout_marginTop="@dimen/size_30"
        android:contentDescription="@string/empty_file"
        android:gravity="center"
        android:src="@drawable/empty_list"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tvEmptyListFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/empty_cart"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_15"
        android:layout_marginTop="@dimen/size_5"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivEmptyListFav"/>

</androidx.constraintlayout.widget.ConstraintLayout>