<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/size_10"
    android:layout_margin="@dimen/size_5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    android:id="@+id/cvMenuItem">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:layout_marginStart="@dimen/size_10"
            android:layout_marginEnd="@dimen/text_15"
            android:layout_marginBottom="@dimen/size_20"
            android:text="@string/item_title"
            android:justificationMode="inter_word"
            android:maxLines="3"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_15"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/cvIvItemImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/item_desc"
            android:textStyle="normal"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_12"
            android:justificationMode="inter_word"
            android:maxLines="3"
            android:layout_marginTop="@dimen/size_20"
            android:layout_marginStart="@dimen/size_10"
            android:layout_marginBottom="@dimen/size_20"
            android:layout_marginEnd="@dimen/text_15"
            app:layout_constraintEnd_toStartOf="@id/cvIvItemImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvItemTitle" />

        <TextView
            android:id="@+id/tvItemValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/item_price"
            android:textStyle="normal"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_13"
            android:layout_marginTop="@dimen/size_20"
            android:layout_marginStart="@dimen/size_10"
            android:layout_marginEnd="@dimen/text_15"
            android:layout_marginBottom="@dimen/size_20"
            android:justificationMode="inter_word"
            android:maxLines="3"
            app:layout_constraintEnd_toStartOf="@id/cvIvItemImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvItemDescription"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvIvItemImage"
            android:layout_width="@dimen/size_90"
            android:layout_height="@dimen/size_90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="@dimen/size_16"
            android:layout_marginEnd="@dimen/size_30">

            <ImageView
                android:id="@+id/ivItemImage"
                android:layout_width="@dimen/size_90"
                android:layout_height="@dimen/size_90"
                android:src="@drawable/qrcode_image"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>